--- a/test/fixture/domestic.html
+++ b/test/fixture/domestic.html
@@ -1,9 +1,5 @@
-<table border="0" cellspacing="1" cellpadding="4" bgcolor="#dcdcdc" width="95%">
-    <tbody>
-        <tr bgcolor="#ffffff">
-            <td align="center" colspan="2">
-                <font size="4">Domestic Total Gross: <b>$107,928,762</b></font>
-            </td>
-        </tr>
-    </tbody>
-</table>
+<tr>
+  <td>
+    <font>Domestic Total Gross: <b>$107,928,762</b></font>
+  </td>
+</tr>
